fixed blog widgets. they werent centered on smaller devices.

--- a/wp-content/themes/ym/src/scss/templates/_blog.scss
+++ b/wp-content/themes/ym/src/scss/templates/_blog.scss
@@ -63,7 +63,6 @@
 			width: 278px;
 		}
 
-
 		.widget {
 			background-color: transparent;
 			margin-bottom: rem(70);
@@ -94,10 +93,6 @@
 				}
 			}
 
-			.gform_wrapper {
-				@include margin(0);
-			}
-
 			.widget-title {
 				font-size: em(20);
 				font-weight: $fw-medium;
@@ -108,22 +103,63 @@
 				}
 			}
 
+			.gform_wrapper {
+				@include margin(0);
+
+				form {
+					display: flex;
+					align-items: center;
+
+					@include bp(wide) {
+						display: block;
+					}
+				}
+
+				.gform_body {
+					margin-right: 1.4em;
+
+					@include bp(wide) {
+						margin-right: 0;
+					}
+				}
+
+				ul.gform_fields li.gfield {
+					margin: 0;
+					padding-right: 0;
+				}
+
+				.left_label li.hidden_label input,
+				.right_label li.hidden_label input {
+					@include bp(max-width wide) {
+						min-width: 230px;
+					}
+
+					margin: 0;
+				}
+			}
+
 			.gform_footer {
-				@include padding(rem(10) 0 0);
+				padding: 0;
+				margin: 0;
 				text-align: center;
+				width: auto;
 
 				@include bp(wide) {
+					margin-left: 0;
+					margin-top: 1.25em;
 					text-align: left;
 				}
 
 				.gform_button {
-					font-size: em(11);
+					font-size: 0.8em;
 					font-weight: $fw-bold;
-					max-width: rem(140);
+					margin: 0;
 				}
 			}
 
 		}
+
+
 
 		// Social Media Widget
 		.social-media-menu-widget {
@@ -153,14 +189,27 @@
 			}
 		}
 
-		// Archive Selector
-		.category-dropdown {
+
+
+		// Archive Dropdown Widget/Tag Widget
+		.widget_archive,
+		.widget_taxonomy_dropdown_widget {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 
 			@include bp(wide) {
-				align-items: flex-start;
+				display: block;
+			}
+
+			select {
+				background-color: $white;
+				font-size: 1.25em;
+				width: rem(280);
+
+				@include bp(wide) {
+					width: 100%;
+				}
 			}
 		}
 	}
